<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <ImageView
        android:id="@+id/login_pic"
        android:layout_width="183dp"
        android:layout_height="209dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_text"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/login_to_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_pic" />

    <TextView
        android:id="@+id/login_to_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_horizontal"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/log_in_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/log_in_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_to_continue"
        android:layout_marginBottom="100dp"
        android:focusableInTouchMode="true"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp">

        <EditText
            android:id="@+id/log_in_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18sp"
            android:textColor="@color/text_color"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/log_in_password"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_background"
            android:padding="15dp"
            android:paddingStart="25sp"
            />

        <EditText
            android:id="@+id/log_in_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18sp"
            android:textColor="@color/text_color"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/log_in_email"
            app:layout_constraintStart_toStartOf="@id/log_in_email"
            app:layout_constraintEnd_toEndOf="@id/log_in_email"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="8dp"
            android:background="@drawable/input_background"
            android:padding="15dp"
            android:paddingStart="25sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/sign_up_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="80dp"
            android:layout_marginVertical="15dp"
            android:padding="12dp"
            android:background="@drawable/button_background"
            />

        <TextView
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18sp"
            android:textColor="@color/text_color"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/log_in_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>