<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/group_recycler_item_background"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="6dp"
    android:padding="8dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/group_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        app:riv_oval="true"
        android:src="@mipmap/ic_launcher"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/group_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/example_user_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/last_msg_writer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/group_avatar"
        app:layout_constraintTop_toTopOf="@id/group_avatar"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/last_msg_writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vasya: "
        android:textColor="@color/OnPrimary"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/group_name"
        app:layout_constraintEnd_toStartOf="@id/group_last_msg"
        app:layout_constraintTop_toBottomOf="@id/group_name"
        />

    <TextView
        android:id="@+id/group_last_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/example_message"
        android:textSize="16sp"
        android:textColor="@color/OnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/last_msg_writer"
        app:layout_constraintTop_toTopOf="@id/last_msg_writer"
        />

    <TextView
        android:id="@+id/last_msg_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12_34pm"
        android:fontFamily="@font/roboto_medium"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="@id/group_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/group_last_msg"
        android:layout_marginEnd="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>