<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="210dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/chat_ic"
        android:layout_marginTop="70dp"
        />

    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_data_to_register_text"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/register_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/create_acc_form"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_acc_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        android:focusedByDefault="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="30dp">

        <EditText
            android:id="@+id/email_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/input_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_ed"
            android:paddingStart="45sp"
            android:padding="15dp"
            android:layout_marginVertical="8dp"
            android:inputType="textEmailAddress"
            />

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/message"
            app:layout_constraintTop_toTopOf="@id/email_ed"
            app:layout_constraintBottom_toBottomOf="@id/email_ed"
            app:layout_constraintStart_toStartOf="@id/email_ed"
            android:layout_marginStart="15dp"
            />

        <EditText
            android:id="@+id/password_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/input_background"
            app:layout_constraintTop_toBottomOf="@id/email_ed"
            app:layout_constraintStart_toStartOf="@id/email_ed"
            app:layout_constraintEnd_toEndOf="@id/email_ed"
            app:layout_constraintBottom_toTopOf="@id/password_twice_ed"
            android:paddingStart="43sp"
            android:padding="15dp"
            android:layout_marginVertical="20dp"
            android:inputType="textPassword"
            />

        <ImageView
            android:id="@+id/first_lock"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="@id/password_ed"
            app:layout_constraintBottom_toBottomOf="@id/password_ed"
            app:layout_constraintStart_toStartOf="@id/email_icon"
            android:src="@drawable/lock"
            />

        <EditText
            android:id="@+id/password_twice_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/input_background"
            app:layout_constraintTop_toBottomOf="@id/password_ed"
            app:layout_constraintStart_toStartOf="@id/email_ed"
            app:layout_constraintEnd_toEndOf="@id/email_ed"
            app:layout_constraintBottom_toBottomOf="@id/password_ed"
            android:paddingStart="43sp"
            android:padding="15dp"
            android:layout_marginVertical="8dp"
            android:inputType="textPassword"
            />

        <ImageView
            android:id="@+id/second_lock"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="@id/password_twice_ed"
            app:layout_constraintBottom_toBottomOf="@id/password_twice_ed"
            app:layout_constraintStart_toStartOf="@id/email_icon"
            android:src="@drawable/lock"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_acc_form"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="200dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_acc_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_acc_button"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="80dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>