<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    android:background="@color/white"
    android:layout_marginEnd="4dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/user_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        app:riv_oval="true"
        android:src="@mipmap/ic_launcher"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/example_user_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/user_online"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_avatar"
        app:layout_constraintTop_toTopOf="@id/user_avatar"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/user_online"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/example_message"
        android:textSize="16sp"
        android:textColor="@color/OnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/user_name"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintBottom_toTopOf="@id/stripe"
        />

    <TextView
        android:id="@+id/last_msg_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12_34pm"
        android:fontFamily="@font/roboto_medium"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/new_msg_group"
        />

    <FrameLayout
        android:id="@+id/new_msg_group"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:background="@drawable/big_msg_grp"
        app:layout_constraintTop_toTopOf="@id/user_avatar"
        app:layout_constraintBottom_toBottomOf="@id/user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0.7"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/count_of_new_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/new_msg_group"
            app:layout_constraintBottom_toBottomOf="@id/new_msg_group"
            app:layout_constraintStart_toStartOf="@id/new_msg_group"
            app:layout_constraintEnd_toEndOf="@id/new_msg_group"
            />

    </FrameLayout>

    <View
        android:id="@+id/stripe"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/OnPrimary"
        app:layout_constraintStart_toStartOf="@id/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_online"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>